--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-certifi==2025.4.26
-charset-normalizer==3.4.2
-idna==3.10
-pyTelegramBotAPI==4.27.0
-requests==2.32.3
-urllib3==2.4.0
-flask==2.3.3
+python-dotenv
+pyTelegramBotAPI
+requests
+Flask
